--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -643,6 +643,43 @@
     "pagination": {
       "prev": "Назад",
       "next": "Вперед"
+    },
+    "expenseTypes": {
+      "pageTitle": "Типы расходов",
+      "create": {
+        "title": "Добавить новый тип расхода"
+      },
+      "edit": {
+        "title": "Изменить тип расхода"
+      },
+      "view": {
+        "title": "Детали типа расхода"
+      },
+      "delete": {
+        "title": "Удалить тип расхода",
+        "message": "Вы уверены, что хотите удалить этот тип расхода?"
+      },
+      "actions": {
+        "add": "Добавить тип расхода",
+        "view": "Просмотр",
+        "edit": "Редактировать",
+        "delete": "Удалить",
+        "loading": "Загрузка..."
+      },
+      "table": {
+        "id": "ID",
+        "name": "Название",
+        "description": "Описание",
+        "createdAt": "Создано",
+        "operations": "Операции"
+      },
+      "form": {
+        "name": "Название",
+        "description": "Описание"
+      },
+      "error": {
+        "loading": "Ошибка загрузки данных"
+      }
     }
   },
   "deposit": {
