--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -1462,7 +1462,31 @@
       "colorPicker": "Rəng seçin",
       "contactInfo": "Əlaqə Məlumatları",
       "latValidation": "Enlik -90 ilə 90 arasında olmalıdır",
-      "lngValidation": "Uzunluq -180 ilə 180 arasında olmalıdır"
+      "lngValidation": "Uzunluq -180 ilə 180 arasında olmalıdır",
+      "logo": "Loqo",
+      "uploadLogo": "Loqo yüklə",
+      "changeLogo": "Loqo dəyiş",
+      "removeLogo": "Loqonu sil",
+      "logoPreview": "Loqo önizləməsi",
+      "mapPicker": "Xəritədən yer seçin",
+      "pickLocation": "Yer seç",
+      "pickLocationDescription": "Xəritədə istədiyiniz yeri klikləyin və koordinatlar avtomatik doldurulacaq",
+      "currentLocation": "Cari yer",
+      "photos": "Şəkillər",
+      "uploadPhotos": "Şəkillər yüklə",
+      "addMorePhotos": "Daha çox şəkil əlavə et",
+      "photoPreview": "Şəkil önizləməsi",
+      "removePhoto": "Şəkli sil",
+      "noPhotos": "Şəkil yoxdur",
+      "maxPhotos": "Maksimum 10 şəkil yükləyə bilərsiniz",
+      "hideMap": "Xəritəni gizlət",
+      "useCurrentLocation": "Cari yeri istifadə et",
+      "mapClickInfo": "Xəritədə yer seçmək üçün xəritəni açın və istədiyiniz yeri klikləyin",
+      "logoSizeError": "Logo faylının ölçüsü 5MB-dan böyük ola bilməz",
+      "photoSizeError": "Şəkil faylının ölçüsü 10MB-dan böyük ola bilməz",
+      "loadingMap": "Xəritə yüklənir...",
+      "geolocationError": "Yerinizi təyin edə bilmədim. Xahiş edirik manuel seçin.",
+      "geolocationNotSupported": "Brauzeriniz geolocation dəstəkləmir."
     },
     "create": {
       "title": "Yeni MTK əlavə et",
