--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1315,7 +1315,31 @@
       "colorPicker": "Pick color",
       "contactInfo": "Contact Information",
       "latValidation": "Latitude must be between -90 and 90",
-      "lngValidation": "Longitude must be between -180 and 180"
+      "lngValidation": "Longitude must be between -180 and 180",
+      "logo": "Logo",
+      "uploadLogo": "Upload logo",
+      "changeLogo": "Change logo",
+      "removeLogo": "Remove logo",
+      "logoPreview": "Logo preview",
+      "mapPicker": "Pick location from map",
+      "pickLocation": "Pick location",
+      "pickLocationDescription": "Click on the map to select location and coordinates will be filled automatically",
+      "currentLocation": "Current location",
+      "photos": "Photos",
+      "uploadPhotos": "Upload photos",
+      "addMorePhotos": "Add more photos",
+      "photoPreview": "Photo preview",
+      "removePhoto": "Remove photo",
+      "noPhotos": "No photos",
+      "maxPhotos": "You can upload up to 10 photos",
+      "hideMap": "Hide map",
+      "useCurrentLocation": "Use current location",
+      "mapClickInfo": "Open the map and click on the desired location to select it",
+      "logoSizeError": "Logo file size cannot exceed 5MB",
+      "photoSizeError": "Photo file size cannot exceed 10MB",
+      "loadingMap": "Loading map...",
+      "geolocationError": "Could not determine your location. Please select manually.",
+      "geolocationNotSupported": "Your browser does not support geolocation."
     },
     "create": {
       "title": "Add new MTK",
