--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1314,7 +1314,31 @@
       "colorPicker": "Выберите цвет",
       "contactInfo": "Контактная информация",
       "latValidation": "Широта должна быть между -90 и 90",
-      "lngValidation": "Долгота должна быть между -180 и 180"
+      "lngValidation": "Долгота должна быть между -180 и 180",
+      "logo": "Логотип",
+      "uploadLogo": "Загрузить логотип",
+      "changeLogo": "Изменить логотип",
+      "removeLogo": "Удалить логотип",
+      "logoPreview": "Предпросмотр логотипа",
+      "mapPicker": "Выберите место на карте",
+      "pickLocation": "Выбрать место",
+      "pickLocationDescription": "Нажмите на карту, чтобы выбрать место, и координаты будут заполнены автоматически",
+      "currentLocation": "Текущее местоположение",
+      "photos": "Фотографии",
+      "uploadPhotos": "Загрузить фотографии",
+      "addMorePhotos": "Добавить больше фотографий",
+      "photoPreview": "Предпросмотр фотографии",
+      "removePhoto": "Удалить фотографию",
+      "noPhotos": "Нет фотографий",
+      "maxPhotos": "Вы можете загрузить до 10 фотографий",
+      "hideMap": "Скрыть карту",
+      "useCurrentLocation": "Использовать текущее местоположение",
+      "mapClickInfo": "Откройте карту и нажмите на желаемое место, чтобы выбрать его",
+      "logoSizeError": "Размер файла логотипа не может превышать 5 МБ",
+      "photoSizeError": "Размер файла фотографии не может превышать 10 МБ",
+      "loadingMap": "Загрузка карты...",
+      "geolocationError": "Не удалось определить ваше местоположение. Пожалуйста, выберите вручную.",
+      "geolocationNotSupported": "Ваш браузер не поддерживает геолокацию."
     },
     "create": {
       "title": "Добавить новый МТК",
